2003-01-27  Daniel Steffen  <das@users.sourceforge.net>

        * macosx/Wish.pbproj/project.pbxproj: removed erroneous reference
        to mkpsenc.tcl in bundle resources phase (mkpsenc.tcl is already
        part of the copy files phase to Resources/Scripts).

        * macosx/Makefile: added support for 'xcodebuild' on Mac OS X 10.3.

2003-12-31  Daniel Steffen  <das@users.sourceforge.net>

        * macosx/Wish.pbproj/project.pbxproj: added missing private headers
        to installed Tk.framework, so that tkInt.h can be included  
        sucessfully from Tk.framework/PrivateHeaders.
	* generic/tkPort.h: corrected include of tkMacOSXPort.h

2003-12-17  Jim Ingham <jingham@apple.com>

        * macosx/tkMacOSXScrlbr.c: Reworking Vince's fix to [Bug 842952].  
	This version is clearer, and works helps keep the mouse better pinned to the
        scrollbar.  I also removed the glitch where the scrollbar would jump get
	its middle over the mouse when you first moved it.
	
	Import from TOT.
	
2003-12-11  David Gravereaux <davygrvy@pobox.com>

	* win/winMain.c: Backed-out yesterdays change.  Reverted to 1.15 for
	two reasons.  1) problem is best addressed in Tcl's DllMain() and
	2) needs a MinGW custom assembly implimentation as it doesn't
	understand SEH syntax.

2003-12-10  David Gravereaux <davygrvy@pobox.com>

	* win/winMain.c (WishPanic) : placed ExitProcess() in a __try block
	(SEH) to catch any exceptions that might happen.  As Tcl will call
	Tcl_Finalize from its DllMain due to the unload from ExitProcess()
	unloading Tcl, and if Tcl_Panic had gotten called in an __except
	block handling an exception, this avoid the possibility of not
	being able to exit from the stack being a mess.  Falls to
	TerminateProcess() in the __except case.

	Removed the #ifdef _MSC_VER around DebugBreak as that function
	exists in kernel32.dll and is not compiler dependent.  I'd prefer
	to use 'if (IsDebuggerPresent()) DebugBreak();' but